--- a/site informal EM novo/html/index.html
+++ b/site informal EM novo/html/index.html
@@ -22,7 +22,17 @@
                 <li> <a class="button-link white-text" href="#">Home</a> </li>
                 <li> <a class="button-link white-text" href="#">Professores</a> </li>
                 <li> <a class="button-link white-text" href="#">Laboratórios</a> </li>
-                <li> <a class="button-link white-text" href="#">Projetos</a> </li>
+                <li class="drop"> <a class="button-link white-text" href="#">Projetos</a> 
+                    <div>
+                        <ul>
+                            <li>Projeto 1</li>
+                            <li>Projeto 2</li>
+                            <li>Projeto 3</li>
+                            <li>Projeto 4</li>
+                        </ul>
+                    </div>
+                </li>
+
                 <div class="menu-toggle" onclick="toggleAction()"><div id="hamburger"></div></div>
             </ul>
         </div> 
@@ -40,6 +50,60 @@
             <iframe class="video" src="https://www.youtube.com/embed/lm69Fh05i78" title="IFRS - Engenharia Mecânica" frameborder="0" allowfullscreen></iframe>
             <h1 class="blue-title">Engenharia mecânica</h1>
             <p class="darker-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem unde debitis quod rem nesciunt? Consequuntur id minima suscipit rem, recusandae error voluptatum quos sed, ex dolor nam. Fugit, dolorum eveniet!</p>
+            
+            <div class="table-container">
+                <table>
+                    <caption class="blue-title">Tabela teste</caption>
+                    <tr>
+                        <th>CODIGO</th>
+                        <th>PRÉ-REQUISITO(S)</th>
+                        <th>NOME DA DISCIPLINA</th>
+                        <th>CRÉDITOS</th>
+                        <th>CARGA HORÁRIA</th>
+                    </tr>
+
+                    <tr class="darker-text">
+                        <td data-cell='CODIGO'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='PRÉ-REQUISITO(S)'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='NOME DA DISCIPLINA'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='CRÉDITOS'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='CARGA HORÁRIA'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                    </tr>
+
+                    <tr class="darker-text">
+                        <td data-cell='Header1'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header2'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header3'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header4'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header5'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                    </tr>
+
+                    <tr class="darker-text">
+                        <td data-cell='Header1'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header2'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header3'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header4'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header5'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                    </tr>
+
+                    <tr class="darker-text">
+                        <td data-cell='Header1'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header2'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header3'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header4'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header5'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                    </tr>
+
+                    <tr class="darker-text">
+                        <td data-cell='Header1'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header2'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header3'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header4'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                        <td data-cell='Header5'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae.</td>
+                    </tr>
+                </table>
+            </div>
+
         </main>
         <div class="side-bar"></div>
     </div>
