--- a/site informal EM novo/html/index.html
+++ b/site informal EM novo/html/index.html
@@ -50,10 +50,9 @@
             <iframe class="video" src="https://www.youtube.com/embed/lm69Fh05i78" title="IFRS - Engenharia Mecânica" frameborder="0" allowfullscreen></iframe>
             <h1 class="blue-title">Engenharia mecânica</h1>
             <p class="darker-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem unde debitis quod rem nesciunt? Consequuntur id minima suscipit rem, recusandae error voluptatum quos sed, ex dolor nam. Fugit, dolorum eveniet!</p>
-            
+            <h1 class="blue-title">Tabela teste</h1>
             <div class="table-container">
                 <table>
-                    <caption class="blue-title">Tabela teste</caption>
                     <tr>
                         <th>CODIGO</th>
                         <th>PRÉ-REQUISITO(S)</th>
